<resources>
    <string name="facebook_app_id">1905081263135372</string>
    <string name="fb_login_protocol_scheme">fb1905081263135372</string>
    <string name="app_name">Transport</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="introduction">Now you can find the best offer to delivery a package</string>
    <string name="welcome">Welcome</string>
    <string name="login">Sign In</string>
    <string name="register">Create a account</string>
    <string name="registertxt">New here? Create a account</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="register_account">Register</string>
    <string name="company">Company</string>
    <string name="User">User</string>
    <string name="registerintroTxt">Register</string>
    <string name="firstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="Confirm">Confirm Password</string>
    <string name="terms">Confrim that you Accept the Terms of Use</string>
    <string name="introTxt">Create your account and find the best way to delivery</string>
    <string name="weight">weight to kg</string>
    <string name="fragility">Fragility</string>
    <string name="courier">Courier</string>
    <string name="shipping">Shipping area</string>
    <string name="s_address">Shipping Address</string>
    <string name="d_area">Delivery location</string>
    <string name="d_address">Delivery address</string>
    <string name="findBest">Find the best offer to delivery</string>
    <string name="weightTxt">Weight of the package</string>
    <string name="search">Search an offer</string>
    <string name="email">Email</string>
    <string name="logintxt">You already have a acount ? Login</string>
    <string name="ship">SHIP FROM</string>
    <string name="ship_to">SHIP TO</string>
    <string name="shipping_from">Shipping from</string>
    <string name="shipping_to">Shipping to</string>
    <string name="Distance">Distance :</string>
    <string name="fastDelivery">Fast delivery :</string>
    <string name="weigth">Weigth  :</string>
    <string name="breakable">Breakable</string>
    <string name="No">No</string>
    <string name="submit">Submit</string>
    <string name="input">Input</string>
    <string name="Number">Number of packages</string>
    <string name="packages">Packages:</string>
    <string name="hintFrom">p.x 254 France Ave Mountain View , CA 94043 ,USA</string>
    <string name="hintFrom_2">USA</string>
    <string name="hintTo"> p.x 505 2nd Ave San Mateo , CA 94401 USA</string>
    <string name="hintTo_2">Usagi restaurant</string>
    <string name="companyname">Register as a Company</string>
    <string name="company_register">Registration  Form</string>
    <string name="fill">Please fill in the form  below</string>
    <string name="company_name">Company name</string>
    <string name="address">Address</string>
    <string name="phone">Phone number</string>
    <string name="Min">Min Cost</string>
    <string name="cost_per_kilo">Cost per kilo</string>
    <string name="cost_breakable">Extra cost for breakable package</string>
    <string name="extr_fast">Extra cost for fast delivery</string>
    <string name="billing_str">Provide details on your billing options</string>
    <string name="uploadImage">Upload Image</string>

</resources>
