<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context="com.example.eftimis.transport.ActivityRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRegister"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_value_small_3"
            android:fontFamily="serif-monospace"
            android:text="@string/register_account"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:layout_marginTop="@dimen/d_value_small_2"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_value_small_2"
            android:fontFamily="serif-monospace"
            android:text="@string/introTxt"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background" />

        <LinearLayout
            android:layout_width="@dimen/gridlayout_width"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d_value_small_2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/com_facebook_likeboxcountview_text_size"
            android:paddingRight="@dimen/com_facebook_likeboxcountview_text_size">

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginTop="@dimen/d_value_small_2"
                android:layout_weight="1"
                android:background="@color/colorRegister"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:hint="@string/firstName"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/com_facebook_likeview_text_size"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginTop="@dimen/d_value_small_2"
                android:layout_weight="1"
                android:background="@color/colorRegister"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:hint="@string/LastName"
                android:inputType="textPersonName"
                android:padding="@dimen/com_facebook_likeboxcountview_text_size"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="@dimen/d_width_layout"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginLeft="@dimen/d_value_small"
            android:layout_marginTop="@dimen/d_value_small_2"
            android:background="@color/colorRegister"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/d_value_small_2"
            android:textColorHint="@android:color/background_light" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/d_width_layout"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginLeft="@dimen/d_value_small"
            android:layout_marginTop="@dimen/d_value_small_2"
            android:layout_weight="1"
            android:background="@color/colorRegister"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/com_facebook_likeboxcountview_text_size"
            android:textAlignment="textStart"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="@dimen/d_width_layout"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_marginLeft="@dimen/d_value_small"
            android:layout_marginTop="@dimen/d_value_small_2"
            android:layout_weight="1"
            android:background="@color/colorRegister"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/Confirm"
            android:inputType="textPassword"
            android:padding="@dimen/com_facebook_likeview_text_size"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="@dimen/d_width_layout"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_value_small"
            android:layout_marginRight="@dimen/com_facebook_likeboxcountview_text_size"
            android:layout_marginTop="@dimen/com_facebook_likeview_text_size"
            android:fontFamily="serif-monospace"
            android:text="@string/terms"
            android:textColor="@color/cardview_light_background"
            android:textColorLink="@color/com_facebook_blue" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="@dimen/d_width_layout"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d_value_small"
            android:layout_marginRight="@dimen/d_value_small"
            android:layout_marginTop="@dimen/d_value_small_2"
            android:background="@drawable/com_facebook_button_background"
            android:fontFamily="serif-monospace"
            android:text="@string/register_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="serif-monospace"
            android:text="@string/logintxt"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>
